--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".homepage" />
         <activity android:name=".MainActivity" />
         <activity android:name=".MainActivity2" />
-        <activity android:name=".login">
+        <activity android:name=".ui.login.login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
