feedback and my platforms activity

--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -2,3 +2,4 @@ service_catalog=http://192.168.1.130:8080/Monitoring-Platform/services
 clientsURI=/clients_catalog
 profilesURI=/profiles_catalog
 serverURI=/server_catalog
+feedbackURI=/feedback_catalog
