--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".overview" />
         <activity android:name=".homepage" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".MainActivity2" />
+        <activity android:name=".MainActivity2"
+            android:theme="@style/AppTheme"/>
         <activity android:name=".ui.login.login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
