--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".homepage" />
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".my_graphs"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme" />
         <activity android:name=".ui.login.login">
             <intent-filter>
