--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -3,4 +3,5 @@ clientsURI=/clients_catalog
 profilesURI=/profiles_catalog
 serverURI=/server_catalog
 feedbackURI=/feedback_catalog
+grafanaURI=/grafana_catalog
 apiKEY=636b475c1fb0e1d78527fbb3edf59473
