--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,4 +1,4 @@
-service_catalog=http://192.168.1.130:8080/Monitoring-Platform/services
+service_catalog=https://services-mp.eu.ngrok.io/Monitoring-Platform/services
 clientsURI=/clients_catalog
 profilesURI=/profiles_catalog
 serverURI=/server_catalog
