--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -4,4 +4,5 @@ profilesURI=/profiles_catalog
 serverURI=/server_catalog
 feedbackURI=/feedback_catalog
 grafanaURI=/grafana_catalog
+brokerURI=/broker
 apiKEY=636b475c1fb0e1d78527fbb3edf59473
