--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,11 @@ android {
 }
 
 dependencies {
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
-    implementation "androidx.preference:preference:1.1.0"
-    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation "androidx.preference:preference:1.1.1"
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.core:core:1.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
